...
        padding: const EdgeInsets.symmetric(horizontal: 16.0),
        child: Center(
          child: Column(
            mainAxisAlignment: MainAxisAlignment.spaceBetween,
            children: <Widget>[
              Text(
                "My Stack",
                style: TextStyle(
                  color: Colors.amber,
                  fontSize: 22
                ),
              ),
              Container(
...
    ];
  }

  List<Widget> _buildDefaultIconSet() {
    return [
      IconButton(
        tooltip: 'Play',
        icon: Icon(Icons.playlist_play),
        iconSize: 32,
        onPressed: () {
          _goToGamePage();
        },
      )
...
